--- a/House_Prices.ipynb
+++ b/House_Prices.ipynb
@@ -5,6 +5,8 @@
     "colab": {
       "name": "House-Prices.ipynb",
       "version": "0.3.2",
+      "views": {},
+      "default_view": {},
       "provenance": [],
       "collapsed_sections": []
     },
@@ -19,7 +21,12 @@
       "metadata": {
         "id": "zwGsqkd7EKGg",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -71,10 +78,25 @@
         "id": "g0WNJk0MUv6S",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 612
         },
-        "outputId": "037b2b8d-9cd1-4d8c-e150-51e09b81e6dc"
+        "outputId": "037b2b8d-9cd1-4d8c-e150-51e09b81e6dc",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562359821,
+          "user_tz": 180,
+          "elapsed": 3085,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -344,10 +366,25 @@
         "id": "esJUC9Obu11c",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 337
         },
-        "outputId": "c9f1930a-1d0b-4b54-f869-b461d7cb128f"
+        "outputId": "c9f1930a-1d0b-4b54-f869-b461d7cb128f",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562360997,
+          "user_tz": 180,
+          "elapsed": 1058,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -624,10 +661,25 @@
         "id": "FLt2N6la19zK",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 479
         },
-        "outputId": "66fef352-a947-473d-d7c6-edda26e2e862"
+        "outputId": "66fef352-a947-473d-d7c6-edda26e2e862",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562362659,
+          "user_tz": 180,
+          "elapsed": 1122,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1805,10 +1857,25 @@
         "id": "ZXhwnoVR7Uyo",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 340
         },
-        "outputId": "2fddaec1-3d27-4eba-a4fa-bc29b39c56be"
+        "outputId": "2fddaec1-3d27-4eba-a4fa-bc29b39c56be",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562364229,
+          "user_tz": 180,
+          "elapsed": 1047,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1865,10 +1932,25 @@
         "id": "h4eCdB17TPvX",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 638
         },
-        "outputId": "9321fdc8-4bee-4fd2-8fb0-8e6cf0e420a7"
+        "outputId": "9321fdc8-4bee-4fd2-8fb0-8e6cf0e420a7",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562365739,
+          "user_tz": 180,
+          "elapsed": 1049,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2074,10 +2156,25 @@
         "id": "fFycKkD70Kbg",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 1200
         },
-        "outputId": "628bae80-5110-41e1-e94d-51e4ac161da8"
+        "outputId": "628bae80-5110-41e1-e94d-51e4ac161da8",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562379904,
+          "user_tz": 180,
+          "elapsed": 13606,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2150,7 +2247,12 @@
       "metadata": {
         "id": "QsGC0U3cj1k5",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2248,10 +2350,25 @@
         "id": "xGpzV4BilKP-",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "98f3f7de-5b1d-4b3e-e643-b0cdf3085f94"
+        "outputId": "98f3f7de-5b1d-4b3e-e643-b0cdf3085f94",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562382796,
+          "user_tz": 180,
+          "elapsed": 1171,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2337,10 +2454,25 @@
         "id": "zZ_mJLamW9nv",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "c29b1db7-dd1b-4103-fe34-87341260293c"
+        "outputId": "c29b1db7-dd1b-4103-fe34-87341260293c",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562384651,
+          "user_tz": 180,
+          "elapsed": 1121,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2490,10 +2622,25 @@
         "id": "1cwysT9584ab",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "ec6a2906-f5de-4386-9e54-4f843185477b"
+        "outputId": "ec6a2906-f5de-4386-9e54-4f843185477b",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562387120,
+          "user_tz": 180,
+          "elapsed": 1914,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2558,10 +2705,25 @@
         "id": "ApQZQ78WqcKB",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "206f8dbb-0f8f-400d-fa2f-dc5b05cc760e"
+        "outputId": "206f8dbb-0f8f-400d-fa2f-dc5b05cc760e",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562388811,
+          "user_tz": 180,
+          "elapsed": 1057,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2695,10 +2857,25 @@
         "id": "TViQeuzlE3Ac",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "061678d2-0a91-4d47-d712-06cd3304350a"
+        "outputId": "061678d2-0a91-4d47-d712-06cd3304350a",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562390520,
+          "user_tz": 180,
+          "elapsed": 1186,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2761,10 +2938,25 @@
         "id": "jCzBmAdMrQPq",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "2c5bd1e5-4782-4099-b507-e4b8af0858d2"
+        "outputId": "2c5bd1e5-4782-4099-b507-e4b8af0858d2",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562392165,
+          "user_tz": 180,
+          "elapsed": 1051,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2892,10 +3084,25 @@
         "id": "FwRQywYvMFqR",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 429
         },
-        "outputId": "dd04e7c9-37d0-402a-d446-f962cfd5b33c"
+        "outputId": "dd04e7c9-37d0-402a-d446-f962cfd5b33c",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562412623,
+          "user_tz": 180,
+          "elapsed": 19946,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -2952,10 +3159,25 @@
         "id": "8Zb2Mi3TIqeL",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "47a56cc7-5a0b-41cb-f797-6c1f33a76c0b"
+        "outputId": "47a56cc7-5a0b-41cb-f797-6c1f33a76c0b",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562413796,
+          "user_tz": 180,
+          "elapsed": 1114,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3082,10 +3304,25 @@
         "id": "GJ0xD9ZWxVxh",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "fbf3898a-9b37-42a6-c8be-e66720efcd7f"
+        "outputId": "fbf3898a-9b37-42a6-c8be-e66720efcd7f",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562415398,
+          "user_tz": 180,
+          "elapsed": 1085,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3136,10 +3373,25 @@
         "id": "CYATPLUmZl_b",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "4aef72e7-7b89-4269-bd46-82fa9e91230b"
+        "outputId": "4aef72e7-7b89-4269-bd46-82fa9e91230b",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1530562480887,
+          "user_tz": 180,
+          "elapsed": 1242,
+          "user": {
+            "displayName": "María Eugenia Cruz",
+            "photoUrl": "https://lh3.googleusercontent.com/a/default-user=s128",
+            "userId": "112432663657646180649"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
